--- a/.env.example
+++ b/.env.example
@@ -21,10 +21,23 @@ MINIO_USE_SSL=false
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRATION=24h
 
+# Signing & Encryption Secrets (REQUIRED - must be at least 32 characters)
+SIGNING_SECRET=your-signing-secret-key-change-in-production-min-32-chars
+ENCRYPTION_SECRET=your-encryption-secret-key-change-in-production-min-32
+
+# Email (Resend - optional for local dev)
+RESEND_API_KEY=
+EMAIL_FROM=onboarding@resend.dev
+EMAIL_FROM_NAME=ZKP Platform
+
 # Service URLs (for inter-service communication)
 LEDGER_SERVICE_URL=http://localhost:3000
 PROVER_COORDINATOR_URL=http://localhost:3001
 API_GATEWAY_URL=http://localhost:3005
+CREDENTIAL_ISSUER_URL=http://localhost:3004
+IDENTITY_SERVICE_URL=http://localhost:3007
+STARTUP_SERVICE_URL=http://localhost:3008
+INVESTOR_SERVICE_URL=http://localhost:3009
 
 # ===========================================
 # Blockchain Configuration
