--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -24,6 +24,8 @@
     "@nestjs/common": "^11.1.9",
     "@nestjs/core": "^11.1.9",
     "@nestjs/platform-express": "^11.0.1",
+    "form-data": "^4.0.5",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
